# Aurochs

./: .editorconfig  .gitignore  README.md  pyproject.toml
.github/: CONTRIBUTING.md  SECURITY.md
.github/ISSUE_TEMPLATE/: ask-a-question.md  bug-report.md  config.yml  feature-request.md
.github/workflows/: automerge.yml  test_suite.yml
aurochs/: app.py
tests/: test_app.py  test_aurochs.py
