[tool.poetry]
name = "Aurochs"
version = "0.1.0"
description = "A scraper for the Python job board"
license = "MIT"
authors = ["Somraj Saha <somraj.mle@gmail.com>"]
readme = "README.md"
repository = "https://github.com/Jarmos-san/Aurochs"
keywords = ["Python", "Jobs", "Developer", "Remote", "Job Board"]

[tool.poetry.urls]
"Tracker" = "https://github.com/Jarmos-san/Aurochs/issues"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
flake8 = "^3.8.4"
pytest-asyncio = "^0.14.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
