[tool.poetry]
name = "Aurochs"
version = "0.1.0"
description = "A scraper for the Python job board"
license = "MIT"
authors = ["Somraj Saha <somraj.mle@gmail.com>"]
readme = "README.md"
repository = "https://github.com/Jarmos-san/Aurochs"
keywords = ["Python", "Jobs", "Developer", "Remote", "Job Board"]

[tool.poetry.urls]
"Tracker" = "https://github.com/Jarmos-san/Aurochs/issues"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
beautifulsoup4 = "^4.9.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
black = "^20.8b1"
flake8 = "^3.8.4"
pytest-cov = "^2.11.0"
isort = "^5.7.0"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -vv --durations=5 --color=auto --code-highlight=yes"
testpaths = ["tests"]
console_output_style = "count"
required_plugins = "pytest-cov"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
